--- a/3° Año/Lenguajes de Programación/Unidad 6/3. Implementación de Unidades en Memoria.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/3. Implementación de Unidades en Memoria.md
@@ -35,13 +35,13 @@ Las acciones que realiza la unidad llamadora en este tipo de lenguajes son los s
 1. La unidad llamadora crea una ***IRA*** para la unidad llamada.
 2. Guarda el estado de ejecución de la unidad actual (registros, contador de programa, entre otros).
 3. En caso de que se pueda pasar una expresión como parámetro primero se lo calcula y se transfieren los parámetros reales a la unidad llamada.
-4. Se le pasa la dirección de retorno a la unidad llamada, esta dirección de retorno es el resultado de sumar el ***IP*** + *desplazamiento*.
+4. Se le pasa la dirección de retorno a la unidad llamada, esta dirección de retorno es el resultado de sumar la **IP** + *desplazamiento*.
 5. Se transfiere el control a la unidad llamada.
 
-Las acciones que debe llevar a cabo la unidad llamada nada más iniciar su ejecución son las siguiente:
+Las acciones que debe llevar a cabo la unidad llamada nada más iniciar su ejecución son la siguiente:
 
 1. La unidad llamada debe guardar el ***environment pointer (EP)***, como su enlace dinámico, y actualizar el ***EP*** con su nuevo valor.
-2. La unidad llamada debe alocar las variables locales y los parámetros, en caso de que el lenguaje maneje pasaje de parámetros por *copia de valor*.
+2. La unidad llamada debe alojar las variables locales y los parámetros, en caso de que el lenguaje maneje pasaje de parámetros por *copia de valor*.
 
 ###### Estructura de Registro de Activación
 
