Se incorporo lo de 'cosas para agregar' y se corrigio lao la imagen de semantica de los parámetros

--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -23,7 +23,8 @@ def fact(n : int) -> int:
 	return n * fact(n - 1) if n > 1 else 1
 ```
 
-Si bien en Python la declaración del tipo en los parámetros y el retorno no es relevante, en otros lenguajes de tipado estricto esto es obligatorio.
+Si bien en Python la declaración del tipo en los parámetros y el retorno no es relevante, en otros lenguajes de tipado estricto esto es obligatorio. Cabe aclarar que los parámetros formales que forman parte del header son consideradas como locales a la unidad, por más que no estén siendo declaradas de forma convencional.
+Por otro lado, el cuerpo de una unidad está integrado por declaraciones, bloques ejecutables.
 
 >[!tldr] El Protocolo y La Firma de una Función
 >El protocolo de una función contiene la información del orden y tipo de cada uno de los parámetros formales, mientras que la firma guarda el nombre de los parámetros formales y el de la función.
@@ -33,7 +34,7 @@ Si bien en Python la declaración del tipo en los parámetros y el retorno no es
 La comunicación con una función puede ocurrir de manera implícita mediante las variables globales (implica efectos colaterales), y de forma explícita a través del pasaje de parámetros, en este último caso tendremos parámetros formales (atributos, unidad 3) que son aquellos definidos en el encabezado de la función y los parámetros reales que son aquellos que se le pasa a la función cuando es llamada.
 Ahora bien, el pasaje de parámetros posee cierta semántica, de la cual derivan los distintos modelos conceptuales utilizados por los lenguajes. Dichas semánticas quedan explicadas gráficamente en la siguiente imagen:
 
-![[semanticasParametros.png]]
+![[LP-semanticaParametros.png]]
 
 De estas distintas semánticas se desprenden los dos grandes modelos de pasajes de parámetros (modelos conceptuales) que conocemos hoy en día, el pasaje ***por copia de valor*** y el pasaje ***por referencia***, que al mismo tiempo poseen variantes.
 
