--- a/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
@@ -8,10 +8,15 @@ En este tipo de unidades existe una subordinación de la unidad llamadora, esto 
 
 ##### Simétricas
 
-En este tipo de unidades existe una unidad que realiza el primer llamado y una vez que eso ocurre se empiezan a llamar explícitamente, las unidades unas a otras, este tipo de control se caracteriza por no delegar la ejecución, es decir, una unidad no termina de ejecutarse en su totalidad para devolver el control a otra, sino que se ejecuta una porción de su código y luego se pone en espera mientras otra unidad es ejecutada. Este tipo de estructuras se caracteriza por tener más de un punto de entrada y de retorno, además de ser sensibles a la historia, ya que se necesita mantener el ambiente de la ejecución para poder retomar luego en el momento exacto en donde se quedó la ejecución.
+En este tipo de unidades existe una unidad (master unit) que realiza el primer llamado y una vez que eso ocurre se empiezan a llamar explícitamente, las unidades unas a otras. Este tipo de control se caracteriza por no delegar la ejecución, es decir, una unidad no termina de ejecutarse en su totalidad para devolver el control a otra, sino que se ejecuta una porción de su código y luego se pone en espera mientras otra unidad es ejecutada. Este tipo de estructuras se caracteriza por tener más de un punto de entrada y de retorno, además de ser sensibles a la historia, ya que se necesita mantener el ambiente de la ejecución para poder retomar luego en el momento exacto en donde se quedó la ejecución.
 
 ![[LP-corrutinas.png]]
 
+Este tipo de estructuras de control posee la siguiente semántica:
+- **Invocación** -> La master unit llama a la primera co-rutina.
+- **Suspensión** -> La co-rutina se ejecuta hasta *x* punto y se pone en espera.
+- **Reanudación** -> La unidad se activa nuevamente y retoma su ejecución desde el punto en el que se quedó.
+- **Finalización**.
 ##### Planificadas
 
 Este tipo de unidades pueden ser planificadas para que su ejecución ocurra luego de un determinado evento o tiempo especulado, la planeación de actividades puede darse de las siguientes maneras:
@@ -26,7 +31,7 @@ Lo usan LP que hacen simulaciones discretas.
 Este tipo de unidades pueden ejecutarse simultáneamente, son conocidas normalmente como ***Tareas*** o ***Procesos***, para que este tipo de unidades puedan ser ejecutadas se tienen que cumplir una serie de condiciones, primero el equipo en donde se lo va a ejecutar debe poseer una arquitectura multiprocesador o multi-núcleo (o sistema distribuido o paralelos), en segundo lugar el sistema operativo de esa máquina debe reconocer y detectar los hilos y por último el lenguaje de programación debe proveer los mecanismos y herramientas necesarios para que el programador puede realizar tareas en paralelo. Por ejemplo, Java con la clase *Threads* y ADA con las *Tasks*.
 
 >[!note] Nota
->Al momento de la implementación de este tipo de mecanismos se debe tener en cuenta una serie de cosas, en primer lugar si las variables a las que van a acceder las distintas tareas van a requerir sincronización o no (por ejemplo variables en región crítica), en segundo lugar como el lenguaje va a proveer el mecanismo para la intercomunicación entre las tareas, si va a ser a través de memoria compartida o por pasaje de mensajes. 
+>Al momento de la implementación de este tipo de mecanismos se debe tener en cuenta una serie de cosas, en primer lugar si las variables a las que van a acceder las distintas tareas van a requerir sincronización o no (por ejemplo variables en región crítica), en segundo lugar como el lenguaje va a proveer el mecanismo para la intercomunicación entre las tareas, si va a ser a través de memoria compartida (Se requiere de sincronización) o por pasaje de mensajes (existe una unidad receptora y una emisora). Además, se debe pensar en la estructura de programa, ya que estos toman una transformación reactiva, es decir, no da resultado, pero da una respuesta de la unidad que se ejecuta.
 >Si no cumple estas consideraciones en las 3 capas (hardware, SO y programa) no puede haber paralelismo.
 
 ## Estructuras de Control Implícitas
@@ -36,6 +41,11 @@ Este tipo de unidades pueden ejecutarse simultáneamente, son conocidas normalme
 Las excepciones son eventos inusuales producidos por la ocurrencia de un error u otro evento inesperado durante la ejecución de nuestro programa, el cual debe ser tratado de manera especial. Los lenguajes de programación que implementan excepciones por lo general cuentan con una sentencia que permite manejarlos manualmente, esto le brinda mayor robustez al lenguaje.
 Ahora bien, a la hora de la implementación de las excepciones se debe establecer en qué punto se va a devolver la ejecución en el programa, ya que de acuerdo a esta decisión se establece de qué manera se va a propagar la excepción.
 
+A la hora de la implementación, el diseñador debe responder dos preguntas fundamentales: ¿Cómo la trato a la excepción?, y ¿Cómo afecta esta al la ejecución del programa? Esta pregunta nos da la información sobre como definimos el alcance de la excepción, que puede ser:
+- La unidad que la produjo.
+- La unidad que invocó a la que la produjo.
+- Un bloque etiquetado fuera de la unidad que la produjo. 
+- La unidad recibida como parámetro.
 ##### Eventos
 
 Al contrario que las excepciones, los eventos es un suceso provocado por un usuario o por el entorno en el que se está ejecutando nuestro programa, el ejemplo más común de esto es la acción de hacer clic en un botón, o la de presionar una tecla determinada. Los eventos son utilizados mayormente en los sistemas reactivos y los distintos widgets que los componen.
