--- a/3° Año/Lenguajes de Programación/Unidad 6/3. Implementación de Unidades en Memoria.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/3. Implementación de Unidades en Memoria.md
@@ -29,13 +29,13 @@ Al momento de retornar la semántica de estos lenguajes establece lo siguiente:
 
 ### Lenguajes Basados en Pila
 
-Con el paso del tiempo, lenguajes como Algol o C utilizan este nuevo mecanismo para la ejecución de las unidades. Los lenguajes basados en pila tienen la particularidad de que no se puede calcular de manera estática la cantidad de memoria requerida para la ejecución de un programa, es por eso que cuando una unidad se activa se crea una nueva instancia de registros de activación, esto implica dos cosas, primero se deberá realizar una alocación de memoria para mantener el ambiente de referenciamiento local para esa unidad activa, y segundo, si una unidad se activa antes de que alguna invocación anterior termine, se creará una nueva ***IRA*** que va a ser independiente del resto y se definirá un nuevo ambiente de referenciamiento. Cuando una unidad termina su ejecución, la ***IRA*** se destruye y se libera espacio en memoria. La principal ventaja de este modelo es que permite la recursividad y se trabaja por eliminación.
+Con el paso del tiempo, lenguajes como Algol o C utilizan este nuevo mecanismo para la ejecución de las unidades. Los lenguajes basados en pila tienen la particularidad de que no se puede calcular de manera estática la cantidad de memoria requerida para la ejecución de un programa, es por eso que cuando una unidad se activa se crea una nueva instancia de registros de activación, esto implica dos cosas, primero se deberá realizar una alocación de memoria para mantener el ambiente de referenciamiento local para esa unidad activa, y segundo, si una unidad se activa antes de que alguna invocación anterior termine, se creará una nueva ***IRA*** que va a ser independiente del resto y se definirá un nuevo ambiente de referenciamiento. Cuando una unidad termina su ejecución, la ***IRA*** se destruye y se libera espacio en memoria, como también su segmento de código. La principal ventaja de este modelo es que permite la recursividad y se trabaja por eliminación.
 Las acciones que realiza la unidad llamadora en este tipo de lenguajes son los siguientes:
 
 1. La unidad llamadora crea una ***IRA*** para la unidad llamada.
 2. Guarda el estado de ejecución de la unidad actual (registros, contador de programa, entre otros).
 3. En caso de que se pueda pasar una expresión como parámetro primero se lo calcula y se transfieren los parámetros reales a la unidad llamada.
-4. Se le pasa la dirección de retorno a la unidad llamada, esta dirección de retorno es el resultado de sumar la **IP** + *desplazamiento*.
+4. Se le pasa la dirección de retorno a la unidad llamada, esta dirección de retorno es el resultado de sumar la **IP** (interrupt pointer) + *desplazamiento*.
 5. Se transfiere el control a la unidad llamada.
 
 Las acciones que debe llevar a cabo la unidad llamada nada más iniciar su ejecución son la siguiente:
