--- a/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
@@ -1,4 +1,4 @@
-Al momento de ejecutar una determinada unidad, existes diversas variedades de métodos para la ejecución y control de estas unidades, a grandes rasgos estas se pueden encasillar en dos categorías, aquellas donde la transferencia de control se realiza de forma ***explícita***, es decir, es invocada por el programador, y la ***implícita***, que son invocadas automáticamente por la ocurrencia de algún suceso o hecho.
+Al momento de ejecutar una determinada unidad, existen diversas variedades de métodos para la ejecución y control de estas unidades, a grandes rasgos estas se pueden encasillar en dos categorías, aquellas donde la transferencia de control se realiza de forma ***explícita***, es decir, es invocada por el programador, y la ***implícita***, que son invocadas automáticamente por la ocurrencia de algún suceso o hecho.
 
 ## Estructuras de control Explícito
 
