Se termino de unir todo

--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -46,7 +46,7 @@ De estas distintas semánticas se desprenden los dos grandes modelos de pasajes 
 	- **Referencia**: La unidad llamadora le pasa a la unidad llamada la dirección del parámetro real, haciendo que toda modificación al parámetro formal se refleje inmediatamente en el parámetro real. Semántica ***inout-mode***.
 	- **Nombre**: La unidad llamadora le pasa a la unidad llamada la dirección del parámetro real, con la diferencia que la ligadura del parámetro formal a esa celda de memoria se realiza cada vez que es referenciada dicha variable, este método es el más flexible, pero es complicado de implementar y es muy lento. Semántica ***inout-mode***.
 
->[!tldr] Pasaje de los Parámetros Reales
+>[!tldr] Mecanismos de Correspondencia entre Parámetros Reales y Formales
 >Al momento de pasar los parámetros reales existen dos maneras de hacerlo: ***por posición*** o ***por nombres***. Veamos las diferencias en el siguiente ejemplo:
 >```Python
 >def persona(nombre: str, apellido: str, edad: int) -> None:
