--- a/3° Año/Lenguajes de Programación/Unidad 6/3. Implementación de Unidades en Memoria.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/3. Implementación de Unidades en Memoria.md
@@ -18,11 +18,13 @@ La semántica de las llamadas a las unidades en este tipo de lenguajes establece
 
 Al momento de retornar la semántica de estos lenguajes establece lo siguiente:
 
-1. Se mueven los valores de los parámetros formales a sus correspondientes parámetros reales.
+1. Se mueven los valores de los parámetros formales a sus correspondientes parámetros reales, esto solo es el caso de los mecanismos **out-mode** e **inout-mode**.
 2. Se mueve el valor de retorno a un espacio de memoria accesible por la unidad llamadora, en caso de que la unidad llamada sea una función.
 3. Se restaura el estado de ejecución de la unidad llamadora.
 4. Se devuelve el control a la unidad llamadora.
 
+>[!note] Nota
+>La sensibilidad histórica es cuando la ejecución anterior modifica los resultados de las siguientes ejecuciones, dejando basura.  
 ###### Estructura de Registro de Activación
 
 ![[LP-LP-estaticos.png]]
